--- a/index.html
+++ b/index.html
@@ -1,5 +1,58 @@
 <html>
-        <body>
-                <h1> My GitHub Web Site!! </h1>
-        </body>
+
+	<head>
+		<title> Joshua McCoy's Page </title>
+	</head>
+	
+	<body>
+		<h1> Joshua McCoy's Page </h1>
+		
+		<img src="nightlife.jpg" alt= "Night"
+		title= "Night Picture!" />
+		
+		<p> I am a student in the Data Bootcamp at UNCC </p>
+		
+		<p> This is week 11 of 27. Woo!!</p>
+		
+		<!-- Unordered List -->
+		<ul> 
+			<li>
+				<a href = "https://twitter.com/josh_mccoy44">
+					@josh_mccoy44
+				</a>
+			</li>
+			<li>
+				<a href = "https://www.linkedin.com/in/joshua-mccoy-396b1113b/">
+					Joshua McCoy
+				</a>
+			</li>
+		</ul>
+		
+		<table border=10>
+			<tr>
+				<th>
+					Favorite Movies
+				</th>
+			</tr>
+			<tr>
+				<td>
+					Good Will Hunting
+				</td>
+			</tr>
+			</tr>
+			<tr>
+				<td>
+					A Beautiful Mind
+				</td>
+			</tr>
+			</tr>
+			<tr>
+				<td>
+					Coach Carter
+				</td>
+			</tr>
+		</table>
+	</body>
+	
+
 </html>
