--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 	</head>
 	
 	<body>
+	
+		<nav>
+			<ul>
+				<li>
+					<a href= "index.html">
+						Home
+					</a>
+					</li>
+					<li>
+					<a href= "project.html">
+						Sample Project Page
+					</a>
+					</li>
+			</ul>
+		</nav>
+		
 		<h1> Joshua McCoy's Page </h1>
 		
 		<img src="nightlife.jpg" alt= "Night"
